--- a/Sistem-Manajemen-Bengkel/Sistem-Manajemen-Bengkel.csproj
+++ b/Sistem-Manajemen-Bengkel/Sistem-Manajemen-Bengkel.csproj
@@ -31,6 +31,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Update="SMB_Form\Karyawan-SuperAdmin\InputEditForm\InputEditMekanik.cs">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
