CRUD Pegawai Form

--- a/Sistem-Manajemen-Bengkel/Sistem-Manajemen-Bengkel.csproj
+++ b/Sistem-Manajemen-Bengkel/Sistem-Manajemen-Bengkel.csproj
@@ -41,7 +41,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="SMB_Form\NewFolder\" />
+    <Folder Include="SMB_Form\Karyawan-SuperAdmin\PopUpForm\" />
+    <Folder Include="SMB_Form\Karyawan-SuperAdmin\SparepartForm\" />
   </ItemGroup>
 
 </Project>
