--- a/Sistem-Manajemen-Bengkel/Sistem-Manajemen-Bengkel.csproj
+++ b/Sistem-Manajemen-Bengkel/Sistem-Manajemen-Bengkel.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.35" />
     <PackageReference Include="FontAwesome" Version="4.7.0" />
+    <PackageReference Include="iTextSharp" Version="5.5.13.4" />
     <PackageReference Include="MaterialSkin.2" Version="2.3.1" />
     <PackageReference Include="OxyPlot.Core" Version="2.2.0" />
     <PackageReference Include="OxyPlot.Wpf" Version="2.2.0" />  
@@ -38,10 +39,6 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="SMB_Form\Pelanggan\BookingForm\" />
   </ItemGroup>
 
 </Project>
