--- a/Sistem-Manajemen-Bengkel/Sistem-Manajemen-Bengkel.csproj
+++ b/Sistem-Manajemen-Bengkel/Sistem-Manajemen-Bengkel.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.104.2" />
     <PackageReference Include="Dapper" Version="2.1.35" />
     <PackageReference Include="FontAwesome" Version="4.7.0" />
     <PackageReference Include="iTextSharp" Version="5.5.13.4" />
