Update For Pelanggan

--- a/Sistem-Manajemen-Bengkel/Sistem-Manajemen-Bengkel.csproj
+++ b/Sistem-Manajemen-Bengkel/Sistem-Manajemen-Bengkel.csproj
@@ -7,10 +7,15 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <ApplicationIcon>Logo APK.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
     <None Remove="Resources\login.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Logo APK.ico" />
   </ItemGroup>
 
   <ItemGroup>
